# flibot

./: Cargo.toml  README.md  migrate_files.py  sqlx-data.json
.sqlx/: query-06bc216130bd1cebb74f2a74587fc5f3c1f4f84b683fc3835154f80978a7a0b0.json  query-1b2fec3e330065fde9a1bc17838cdb55943f23aa1800eebb5c313ca21f8b6903.json  query-2572fdfab88b44c48870b5707c1830d066631d4b02a005b79fbe2e6bd35e8b3b.json  query-2f5a76fc3179240f5ff1051fb3ce33c857a3b037f091b04cf9a4d2d379f6ef1a.json  query-c160a64ba94ef0d51cb3b9456fb5e133f97c7532c6f3b87a27058ec61e3a14dd.json  query-cc26be3777123cdbb9d13539b76e7420d27ccbb5a46a5b64c551285238f72ac9.json  query-e870905a4c818989cff72049413c4387f8f5e2095e3b01f1911ca568f557d860.json  query-ea4afe1406805bcb71090d3dfd7c48445a9fb6dcbbce21e86a200d9bb368c4c9.json  query-ed55f497c90a3f72e9378da16c8321a1a6f94d06a1613212243b860a509e0b4a.json  query-f130f743997985ffadb43ab0cc4ec37a434b41f3976d89f5afb8c47171de2c0a.json  query-faf536ade3a607fa230660a62845cbd4ee8107fca27a6bb448547a5347edd7c2.json
migrations/: 20220212163616_init.sql  20220406191534_series.sql  20250104184602_move_files_out.sql
src/: cache.rs  db.rs  fetcher.rs  filedb.rs  main.rs  parser.rs  parser_types.rs  telegram.rs
